--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -7,24 +7,24 @@
                     <h1>Add Course</h1>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Course Title</label>
-                    <input name ="courseTitle" [(ngModel)]="courseTitle" type="text" class="form-control">
+                    <label for="" class="form-label">Title</label>
+                    <input name ="title" [(ngModel)]="title" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Description</label>
-                    <input name="courseDescription" [(ngModel)]="courseDescription" type="text" class="form-control">
+                    <input name="description" [(ngModel)]="description" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Duration</label>
-                    <input name="courseDuration" [(ngModel)]="courseDuration" type="text" class="form-control">
+                    <input name="duration" [(ngModel)]="duration" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Date</label>
-                    <input name="courseDate" [(ngModel)]="courseDate" type="date" name="" id="" class="form-control">
+                    <input name="date" [(ngModel)]="date" type="date" name="" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Venue</label>
-                    <input name="courseVenue" [(ngModel)]="courseVenue" type="text" class="form-control">
+                    <input name="venue" [(ngModel)]="venue" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <button (click)="readValue()" class="btn btn-success">Submit</button>
