--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -10,9 +10,10 @@
                     <label for="" class="form-label">Title</label>
                     <input name ="title" [(ngModel)]="title" type="text" class="form-control">
                 </div>
-                <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Description</label>
-                    <input name="description" [(ngModel)]="description" type="text" class="form-control">
+                    <textarea name="description" [(ngModel)]="description" id="" cols="30" rows="10" class="form-control"></textarea>
+                    
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Duration</label>
