--- a/src/app/view-course/view-course.component.html
+++ b/src/app/view-course/view-course.component.html
@@ -18,7 +18,7 @@
       <tr *ngFor="let i of Courses">
        
         <td>{{i.title}}</td>
-        <td>{{i.description}}></td>
+        <td>{{i.description}}</td>
         <td>{{i.duration}}</td>
         <td>{{i.date}}</td>
         <td>{{i.venue}}</td>
