--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -14,7 +14,10 @@
       <li>
           <a class="nav-link" routerLink="/view">View</a>
       </li>
-
+      
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/search">Search</a>
+      </li>
         </ul>
       </div>
     </div>
